<resources>
    <string name="app_name">Code World</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_signup">SIGNUP</string>
    <string name="btn_next">NEXT</string>
    <string name="enter">Enter</string>
    <string name="btn_home">Home</string>
    <string name="btn_ldrbrd">LeaderBoard</string>
    <string name="btn_addqu">Add </string>
    <string name="btn_edqu">Edit </string>
    <string name="btn_delqu">Delete</string>
    <string name="txt_login">Login</string>
    <string name="txt_forgot">Forgot Password?</string>
    <string name="txt_signup">Signup</string>
    <string name="txt_cre">Create your account</string>
    <string name="noacc">Dont have an account?</string>
    <string name="acc">Have an account?</string>
    <string name="txt_chgpass">Change Password</string>
    <string name="cancel">Cancel</string>
    <string name="curpass">Current Password</string>
    <string name="pass">New Password</string>
    <string name="menu">Welcome Student</string>
    <string name="txt_html">HTML</string>
    <string name="txt_css">CSS</string>
    <string name="txt_remtime">Remaining Time</string>
    <string name="course">Courses</string>
    <string name="exam">Exam</string>
    <string name="assignments">Tasks</string>
    <string name="mngadmin">Manage Admin</string>
    <string name="action_settings">Settings</string>
    <string name="category">Categories</string>
    <string name="menu2">Menu</string>
    <string name="sql">SQL</string>
    <string name="java">JAVA</string>
    <string name="python">Python</string>
    <string name="Yes">True</string>
    <string name="No">False</string>
    <string name="private_notes">Quick Notes</string>
    <string name="q1">Which is responsible for making the text bold in HTML?</string>
    <string name="q2"> Which tag is used for inserting the largest heading in HTML?</string>
    <string name="q3"> How to create an unordered list in HTML?</string>
    <string name="q4">Which attribute is used to provide a unique name to an element?</string>
    <string name="q5"> The tags in HTML are case sensitive. True or False? </string>
    <string name="a1">&lt;b&gt;</string>
    <string name="a2">&lt;h1&gt;</string>
    <string name="a3">&lt;u1&gt;</string>
    <string name="a4">class</string>
    <string name="a5">True</string>
    <string name="i1">&lt;br&gt;</string>
    <string name="i2">&lt;h6&gt;</string>
    <string name="i3">&lt;ol&gt;</string>
    <string name="i4">ID</string>
    <string name="i5">False</string>
    <string name="q1c">How to select the elements with the class name example?</string>
    <string name="q2c">The CSS property used to draw a line around the elements outside the border?</string>
    <string name="q3c">The CSS property used to make the rounded borders around an element is?</string>
    <string name="q4c">  The CSS property used to set the minimum width of the element content box is?</string>
    <string name="q5c">The CSS property used to specify the transparency of an element is </string>
    <string name="a1c">Class example</string>
    <string name="a2c">border</string>
    <string name="a3c">border-radius</string>
    <string name="a4c">min-width property</string>
    <string name="a5c">opacity</string>
    <string name="i1c">.example</string>
    <string name="i2c">outline</string>
    <string name="i3c">border-spacing</string>
    <string name="i4c">width property</string>
    <string name="i5c">overlay</string>
    <string name="Photo">Identity Verification</string>
    <string name="btnphoto">Take Photo</string>
    <string name="attend">Attend Exam</string>
    <string name="welcome">Welcome To Exam</string>
    <string name="title_activity_css_exam">CssExam</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="textview_assignment">Assignments</string>
    <string name="textview_java">Java</string>
    <string name="btn_java">Java</string>
    <string name="btn_html">HTML</string>
    <string name="btn_c">C</string>
    <string name="image_Java">This is java image</string>
    <string name="image_html">This is java html</string>
    <string name="btn_edit_sub">Edit submission </string>
    <string name="textview_submit_status">Submit Status :</string>
    <string name="textview_status">Submitted</string>
    <string name="textview_Date1">Due Date :</string>
    <string name="textview_date2">27.082021</string>
    <string name="textView_time_remaining">Time Remaining :</string>
    <string name="editText_remaining"> remaining time </string>
    <string name="textView_modified"> Last Modified </string>
    <string name="textView_modified_value"> 21.07.2021 </string>
    <string name="btn_View"> View</string>
    <string name="text_view_file">File :</string>
    <string name="btn_create"> Create </string>
    <string name="textview_status2"> Pending </string>
    <string name="textView_file_picker"> file Picker </string>
    <string name="textview_attachment"> Attachment : </string>
    <string name="btn_choose_file">Choose file </string>
    <string name="textView_save_file"> Save File as :</string>
    <string name="button_save_file"> Name </string>
    <string name="btn_upload"> Upload this file </string>
    <string name="btn_down"> Download </string>
    <string name="menu_course"> Courses </string>
    <string name="menu_dash"> Menu </string>
    <string name="menu_chat"> Forum </string>
    <string name="btn_add_assignment"> Add Assignment </string>
    <string name="Image_View_submit"> Submit </string>
    <string name="textView_submit1"> Congratulations </string>
    <string name="textView_submit2"> You successfully submitted the assignment!!!!!! </string>
    <string name="editText_id">enter id</string>
    <string name="editText_status"> Task </string>
    <string name="textView_name">Name : </string>
    <string name="editText_name"> viji.pdf </string>
    <string name="btn_delete">Delete</string>
    <string name="btn_update">update</string>
    <string name="course_python">Python</string>
    <string name="course_csharp">C#</string>
    <string name="course_html">HTML</string>
    <string name="not_found"> Not Found</string>
    <string name="courses">Courses</string>
    <string name="learn">learn</string>
    <string name="back">back</string>
    <string name="result_python">Python</string>
    <string name="result_csharp">C#</string>
    <string name="no_more_result">No More Result</string>
    <string name="search_bar">Search</string>
    <string name="search_php">PHP</string>
    <string name="result_html">HTML</string>
    <string name="categoryk">Category</string>
    <string name="result_sql">SQl</string>
    <string name="go_back">go_back</string>
    <string name="title_course">Courses</string>
    <string name="btn_ur_python">Python</string>
    <string name="btn_ur_csharp">C#</string>
    <string name="btn_ur_html">HTML</string>
    <string name="btn_ur_enroll"> More</string>
    <string name="search_html">HTML</string>
    <string name="img_src_rst_html"> </string>
    <string name="btn_src_rsc_html">HTML</string>
    <string name="btn_no_more"> No More </string>
    <string name="txt_congrat">Congratulations !</string>
    <string name="txt_success">You Have Successfully Finished the Course !</string>
    <string name="btn_exam"> Exam</string>
    <string name="admin_menu_img_python"> </string>
    <string name="admin_menu_btn_python">Python</string>
    <string name="admin_menu_btn_csharp">C#</string>
    <string name="admin_menu_btn_html">HTML</string>
    <string name="admin_menu_img_csharp"> </string>
    <string name="admin_menu_img_html"> </string>
    <string name="admin_edit"> Edit Course</string>
    <string name="admin_delete"> Delete Course</string>
    <string name="admin_img_menu"> </string>
    <string name="btn_add_cmnt"> … </string>
    <string name="course_content_html"> HTML </string>
    <string name="content_head"> Tags For Headers </string>
    <string name="course_intro"> Introduction </string>
    <string name="course_content"> The header tag contains information related to the title and heading of the related content. </string>
    <string name="course_content1"> The header element is intended to usually contain the section\'s heading (an h1-h6 element or a group element), but this is not required. </string>
    <string name="course_content_next"> Next </string>
    <string name="admin_content_head"> Tags For Headers </string>
    <string name="admin_course_intro"> Introduction </string>
    <string name="admin_course_content"> The header tag contains information related to the title and heading of the related content. </string>
    <string name="admin_course_content1"> The header element is intended to usually contain the section\'s heading (an h1-h6 element or a group element), but this is not required. </string>
    <string name="admin_course_content_next"> Next </string>
    <string name="admin_course_content_save"> Save </string>
    <string name="del_python"> Python </string>
    <string name="del_html"> HTML </string>
    <string name="del_c"> C# </string>
    <string name="html_cont1"> Tags For Headers </string>
    <string name="html_cont2"> Links </string>
    <string name="html_cont3"> Tables </string>
    <string name="html_cont4"> Lists </string>
    <string name="html_cont5"> Formatting </string>
    <string name="cont_next"> Next </string>
    <string name="st_alarm"> start </string>
    <string name="input_time"> Enter Time </string>
    <string name="input_time1"> Enter Time </string>
    <string name="alarm"> Alarm </string>
    <string name="summary"> Set Time To Summarize By Yourself, Start with a Simple Calculation :)  , Time + Time = Your Total Study Time!! </string>
    <string name="menuk">Menu</string>
    <string name="forum">Forum</string>
    <string name="Edited_text">Edited_text</string>
    <string name="search_sub">Search</string>
    <string name="edit_sub">Edit</string>
    <string name="add_sub">Add</string>
    <string name="delete_sub">Delete</string>
    <string name="admin_username"> </string>
    <string name="admin_pw"> </string>
    <string name="admin_login"> Login </string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">LOG IN</string>
    <string name="course_name">Course Name</string>
    <string name="duration">Duration</string>
    <string name="update_course">Update</string>
    <string name="update_title"> Update Course </string>
    <string name="Admin_home"> … </string>
    <string name="admin_logout">Log out</string>
    <string name="ad_course"> Course Name </string>
    <string name="add_duration"> Duration </string>
    <string name="admin_add"> Add </string>
    <string name="adding_course"> Add Course </string>
    <string name="in_r">1</string>
    <string name="Comments">Comments</string>
    <string name="btn_cmnt">Add</string>
    <string name="comments_title"> Reviews </string>
    <string name="type_cmnt">Enter Comments</string>
    <string name="text_cmnt">Add comments and Give as Review</string>
    <string name="btnup">Update</string>
    <string name="btndel">Delete</string>
    <string name="forum_textView">Forum</string>
    <string name="Add_post_btn">Add Post</string>
    <string name="edit_post_btn">Edit Post</string>
    <string name="delete_post_btn">Delete Post</string>
    <string name="imageview_chat_forum">account</string>
    <string name="chat_textview_forum">Is python a case sensitive language?</string>
    <string name="imageView2_chat_forum">account lecture</string>
    <string name="chat_lec_textview_forum">Yes. Python is a case sensitive programming language.</string>
    <string name="imageView3_lecture_forum">account person</string>
    <string name="chat_textView2_forum">Python is a high-level, interpreted, interactive and object-oriented scripting language.</string>
</resources>