<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/admin_home3"
        android:layout_width="412dp"
        android:layout_height="80dp"
        android:backgroundTint="@color/main"
        android:freezesText="false"
        android:text="@string/Admin_home"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textIsSelectable="false"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView32"
        android:layout_width="38dp"
        android:layout_height="36dp"
        android:contentDescription="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.041"
        app:srcCompat="@drawable/abc_vector_test" />

    <TextView
        android:id="@+id/admin_content_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admin_content_head"
        android:textColor="#0C0C0C"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.154" />

    <TextView
        android:id="@+id/admin_course_intro"
        android:layout_width="203dp"
        android:layout_height="44dp"
        android:text="@string/admin_course_intro"
        android:textColor="#070707"
        android:textSize="28sp"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.237" />

    <Button
        android:id="@+id/admin_course_content_next"
        android:layout_width="128dp"
        android:layout_height="61dp"
        android:backgroundTint="@color/main"
        android:text="@string/admin_course_content_next"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.812"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.881" />

    <Button
        android:id="@+id/admin_course_content_save"
        android:layout_width="128dp"
        android:layout_height="61dp"
        android:backgroundTint="@color/main"
        android:onClick="showAlertDialog"
        android:text="@string/admin_course_content_save"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.187"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.882"
        tools:ignore="UsingOnClickInXml" />

    <TextView
        android:id="@+id/course_content_html"
        android:layout_width="383dp"
        android:layout_height="41dp"
        android:background="@color/main"
        android:gravity="center"
        android:text="@string/course_content_html"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.042" />

    <ImageView
        android:id="@+id/go_back"
        android:layout_width="38dp"
        android:layout_height="36dp"
        android:contentDescription="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.041"
        app:srcCompat="@drawable/abc_vector_test" />

    <EditText
        android:id="@+id/admin_course_content"
        android:layout_width="320dp"
        android:layout_height="127dp"
        android:ems="10"
        android:hint="@string/admin_course_content"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/admin_course_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.313"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35"
        tools:ignore="EditableContentDescCheck" />

    <EditText
        android:id="@+id/admin_course_content1"
        android:layout_width="320dp"
        android:layout_height="133dp"
        android:ems="10"
        android:hint="@string/admin_course_content1"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/admin_course_content1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.417"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.557" />

    <TextView
        android:id="@+id/Edited_text"
        android:layout_width="325dp"
        android:layout_height="107dp"
        android:text="@string/Edited_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.441"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.749" />
</androidx.constraintlayout.widget.ConstraintLayout>