<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


    <EditText
        android:id="@+id/type_cmnt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type_cmnt"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHighlight="#D87676"
        tools:ignore="SpeakableTextPresentCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TouchTargetSizeCheck" />

        <Spinner
            android:id="@+id/courses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/type_cmnt"
            android:entries="@array/courses"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"></Spinner>

    <Button
        android:id="@+id/btncomment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/courses"
        android:background="@color/main"
        android:text="@string/btn_cmnt"
        android:textColor="@color/white"
        android:textSize="20sp"
        tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/comments_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btncomment"
            android:padding="16dp"
            android:text="@string/Comments"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/text_cmnt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/comments_title"
            android:text="@string/text_cmnt"
            android:textAlignment="center" />

        <ListView
            android:id="@+id/listView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_cmnt"></ListView>

    </RelativeLayout>