<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Forum_Main">

    <TextView
        android:id="@+id/forum_textView"
        android:layout_width="336dp"
        android:layout_height="57dp"
        android:background="@color/main"
        android:gravity="center"
        android:text="@string/forum_textView"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:backgroundTint="@color/main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/background_textview"
        android:layout_width="323dp"
        android:layout_height="474dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/background_border"
        android:gravity="center"
        android:text=""
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.497" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:fadingEdge="horizontal"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:rotation="0"
        android:rotationX="0"
        android:textAlignment="center"
        app:backgroundTint="@color/main"
        app:itemIconTint="@color/white"
        app:itemTextAppearanceActive="@style/Widget.MaterialComponents.Toolbar"
        app:itemTextAppearanceInactive="@style/MaterialAlertDialog.MaterialComponents.Title.Icon.CenterStacked"
        app:itemTextColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:menu="@menu/bottomnav_bar" />


    <Button

        android:id="@+id/Add_post_btn"
        android:layout_width="94dp"
        android:layout_height="70dp"
        android:text="@string/Add_post_btn"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:backgroundTint="@color/main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.162"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.206" />

    <Button
        android:id="@+id/edit_post_btn"
        android:layout_width="94dp"
        android:layout_height="70dp"

        android:text="@string/edit_post_btn"
        android:textSize="14sp"
        android:textStyle="bold"
        app:backgroundTint="@color/main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.206" />

    <Button
        android:id="@+id/delete_post_btn"
        android:layout_width="94dp"
        android:layout_height="70dp"

        android:text="@string/delete_post_btn"
        android:textSize="14sp"
        android:textStyle="bold"
        app:backgroundTint="@color/main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.854"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.206" />

    <ImageView
        android:id="@+id/imageview_chat_forum"
        android:layout_width="52dp"
        android:layout_height="60dp"
        android:contentDescription="@string/imageview_chat_forum"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.153"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.377"
        app:srcCompat="@drawable/account" />

    <TextView
        android:id="@+id/chat_textview_forum"
        android:layout_width="223dp"
        android:layout_height="78dp"
        android:layout_centerInParent="true"
        android:background="@drawable/rounded_corner_border"
        android:text="@string/chat_textview_forum"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.675"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.387" />

    <ImageView
        android:id="@+id/imageView2_chat_forum"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:contentDescription="@string/imageView2_chat_forum"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.83"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.554"
        app:srcCompat="@drawable/account" />

    <TextView
        android:id="@+id/chat_lec_textview_forum"
        android:layout_width="226dp"
        android:layout_height="80dp"
        android:layout_centerInParent="true"
        android:background="@drawable/rounded_corner_border"
        android:text="@string/chat_lec_textview_forum"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.296"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.56" />

    <ImageView
        android:id="@+id/imageView3_lecture_forum"
        android:layout_width="47dp"
        android:layout_height="51dp"
        android:contentDescription="@string/imageView3_lecture_forum"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.164"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.755"
        app:srcCompat="@drawable/account" />

    <TextView
        android:id="@+id/chat_textView2_forum"
        android:layout_width="226dp"
        android:layout_height="93dp"
        android:layout_centerInParent="true"
        android:background="@drawable/rounded_corner_border"
        android:gravity="center"
        android:text="@string/chat_textView2_forum"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.677"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.771" />


</androidx.constraintlayout.widget.ConstraintLayout>