<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">


    <EditText
        android:id="@+id/type_cmnt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type_cmnt"
        android:importantForAutofill="no"
        android:inputType="text"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <Spinner
        android:id="@+id/courses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/courses"
        tools:ignore="TouchTargetSizeCheck">

    </Spinner>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnup"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/main"
            android:backgroundTint="@color/main"
            android:text="@string/btnup"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btndel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/main"
            android:backgroundTint="@color/main"
            android:text="@string/btndel"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>


</LinearLayout>